fix fish css on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -41,7 +41,7 @@ div > #gungstol{
 div > #pendel{
   width: 0.75vw;
   left: 60.4%;
-  top: 43.5%;
+  top: 43.3%;
 }
 div > #fish{
   width: 3.3%;
